# TriangleRotator

./: .gitignore  CMakeLists.txt  Coords.cpp  Coords.h  FileSelector.cpp  FileSelector.h  GameLogic.cpp  GameLogic.h  SDL_Interface.cpp  TriangleBoard.cpp  TriangleBoard.h  TriangleRotator.sln  TriangleRotator.vcxproj  TriangleRotator.vcxproj.filters  debug.cpp  default.data  main.cpp  setup.ps1
include/: FileSelector.h  SDL_Interface.h
